--- a/best-cigars-guide/styles/styles.css
+++ b/best-cigars-guide/styles/styles.css
@@ -45,7 +45,7 @@
   --content-width: 1020px;
 }
 
-@media (width >= 900px) {
+@media (min-width: 900px) {
   :root {
     --heading-font-size-xxl: 60px;
     --heading-font-size-xl: 48px;
@@ -56,7 +56,7 @@
   }
 }
 
-@media (width <= 600px) {
+@media (max-width: 600px) {
   :root {
     --nav-height: 180px;
   }
@@ -203,13 +203,13 @@ main .section {
   padding: 64px 16px;
 }
 
-@media (width >= 600px) {
+@media (min-width: 600px) {
   main .section {
     padding: 64px 32px;
   }
 }
 
-@media (width >= 900px) {
+@media (min-width: 900px) {
   .section > div {
     max-width: var(--content-width);
     margin: auto;
